feat: реализован фронтенд для логина регистрации и профиля
